--- a/README.Rmd
+++ b/README.Rmd
@@ -10,6 +10,17 @@ knitr::opts_chunk$set(echo = TRUE)
 This repository contains the main code to reproduce the results of the paper "Treatment-control comparisons in platform trials including non-concurrent controls''. 
 <!-- "[Treatment-control comparisons in platform trials including non-concurrent controls](https://arxiv.org)". -->
 
+## NCC R-package
+
+The version of the `NCC` [R-package](https://pavlakrotka.github.io/NCC/) that was used for the simulation study is included in this repository.
+
+This version is labeled as Release 1.2 on [GitHub](https://github.com/pavlakrotka/NCC) and can be installed by running the following code:
+
+```{r, message=FALSE, warning=FALSE, results=FALSE, eval=FALSE}
+# install.packages("devtools") 
+devtools::install_github("pavlakrotka/NCC@v1.2", force = TRUE, build_vignettes = TRUE)
+```
+
 ------------------------------------------------------------------------
 
 **Funding**
